--- a/index.html
+++ b/index.html
@@ -85,6 +85,13 @@
             <i class="fas fa-crown"></i>
         </div>
         <div class="complete_text">You've completed the Quiz!</div>
+        <div class="score_text">
+            <span>and sorry, You got only <p>2</p> out of <p>5</p></span>
+        </div>
+        <div class="buttons">
+            <button class="restart">Replay Quiz</button>
+            <button class="quit">Q  uit Quiz</button>
+        </div>
     </div>
 
     <script src="./assets/js/script.js"></script>
