--- a/index.html
+++ b/index.html
@@ -43,13 +43,14 @@
                 <div class="timer_text">Time Left</div>
                 <div class="timer_sec">15</div>
             </div>
+            <div class="time_line"></div>
         </header>
         <section>
             <div class="que_text">
-                <span>What does HTML stand for?</span>
+                <!-- <span>What does HTML stand for?</span> -->
             </div>
             <div class="option_list">
-                <div class="option">
+                <!-- <div class="option">
                     <span>Hyper Text Preprocessor</span>
                     <div class="icon tick">
                         <i class="fas fa-check"></i>
@@ -64,16 +65,16 @@
                 </div>
                 <div class="option">
                     <span>Hyper Tool Multi Language</span>
-                </div>
+                </div> -->
             </div>
         </section>
 
         <!-- Quiz Box Footer -->
         <footer>
             <div class="total_que">
-                <span>
+                <!-- <span>
                     <p>2</p>of<p>5</p>Questions
-                </span>
+                </span> -->
             </div>
             <button class="next_btn">Next Que</button>
         </footer>
@@ -90,11 +91,12 @@
         </div>
         <div class="buttons">
             <button class="restart">Replay Quiz</button>
-            <button class="quit">Q  uit Quiz</button>
+            <button class="quit">Quit Quiz</button>
         </div>
     </div>
 
     <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/questions.js"></script>
 
 </body>
 
